--- a/assignment-typescript/package.json
+++ b/assignment-typescript/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.8.1",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "react": "^17.0.2",
